ipc/ipdl/test/ipdl/error/tooWeakIntrAsync.ipdl
protocol tooWeakIntrAsync {

    // it's an error to declare an async protocol with an intr message

parent: intr Msg();

};
